javascript logic takes data from user and creates customized results based on values.

--- a/index.html
+++ b/index.html
@@ -11,42 +11,45 @@
       <div class="jumbotron">
         <h2>Stress Test</h2>
       </div>
-      <form id="transportation_survey">
+      <form id="stressTest">
         <div class="form-group">
           <p>Please select the following stressors that apply to you:</p>
-          <input type="checkbox" name="stressor-one" value=1>Drink 2 or more cups of coffee per day.<br>
-          <input type="checkbox" name="stressor-one" value=2>Regularly eat processed/fast food.<br>
-          <input type="checkbox" name="stressor-one" value=3>Consume alcoholic beverages daily.<br>
-          <input type="checkbox" name="stressor-one" value=4>Smoke tobacco.<br>
-          <input type="checkbox" name="stressor-one" value=5>Use illegal drugs/abuses prescription medication.<br>
+          <input type="checkbox" name="stressor-one" value="1">Drink 2 or more caffeinated beverages daily.<br>
+          <input type="checkbox" name="stressor-one" value="2">Regularly eat processed/fast food.<br>
+          <input type="checkbox" name="stressor-one" value="3">Consume alcoholic beverages daily.<br>
+          <input type="checkbox" name="stressor-one" value="4">Smoke tobacco.<br>
+          <input type="checkbox" name="stressor-one" value="5">Use illegal drugs/abuses prescription medication.<br>
         </div>
         <div class="form-group">
           <p>Please select the following stressors that apply to you:</p>
-          <input type="checkbox" name="stressor-two" value=1>Do not take breaks throughout work day.<br>
-          <input type="checkbox" name="stressor-two" value=2>Do not stay hydrated.<br>
-          <input type="checkbox" name="stressor-two" value=3>Do not exercise regularly.<br>
-          <input type="checkbox" name="stressor-two" value=4>Do not sleep at least 7 hours per day.<br>
-          <input type="checkbox" name="stressor-two" value=5>Work more than 60 hours per week regularly.<br>
+          <input type="checkbox" name="stressor-two" value="1">Do not take breaks throughout work day.<br>
+          <input type="checkbox" name="stressor-two" value="2">Do not stay hydrated.<br>
+          <input type="checkbox" name="stressor-two" value="3">Do not exercise regularly.<br>
+          <input type="checkbox" name="stressor-two" value="4">Do not sleep at least 7 hours per day.<br>
+          <input type="checkbox" name="stressor-two" value="5">Work and/or study more than 60 hours per week regularly.<br>
         </div>
         <div class="form-group">
           <p>Please select the following ways that you reduce stress:</p>
-          <input type="checkbox" name="stress-reduce" value=-1>Meditation.<br>
-          <input type="checkbox" name="stress-reduce" value=-2>Eat healthy food regularly.<br>
-          <input type="checkbox" name="stress-reduce" value=-3>Stay hydrated.<br>
-          <input type="checkbox" name="stress-reduce" value=-4>Exercise regularly.<br>
-          <input type="checkbox" name="stress-reduce" value=-5>Sleep at least 7 hours per day.<br>
+          <input type="checkbox" name="stress-reduce" value="-1">Meditation.<br>
+          <input type="checkbox" name="stress-reduce" value="-2">Eat healthy food regularly.<br>
+          <input type="checkbox" name="stress-reduce" value="-3">Stay hydrated.<br>
+          <input type="checkbox" name="stress-reduce" value="-4">Exercise regularly.<br>
+          <input type="checkbox" name="stress-reduce" value="-5">Sleep at least 7 hours per day.<br>
           </div>
        <button type="submit">Submit Survey</button>
       </form>
       <div id= "notStressed">
-        <p><b>You use the following methods of transportation to travel to work or school:</b></p>
+        <h3>Very low stress</h3>
+        <p><b>You do a great job managing stress in your life! You are a great example of how to minimize stress, and be sure to teach your ways to everyone you know!</b></p>
       </div>
       <br>
       <div id="moderateStressed">
-        <p><b>You use the following methods of transportation to travel to other activities and events:</b></p>
+        <h3>Moderately Stressed</h3>
+        <p><b>You have a little bit of excess stress in your life, there is definitely room for improvement! Make sure to get enough sleep, stay hydrated, and exercise. </b></p>
       </div>
       <div id="veryStressed">
-        <p><b>You use the following methods of transportation to travel to other activities and events:</b></p>
+        <h3>Highly Stressed</h3>
+        <p><b>You have a severe excess of stress in your life. It would be highly beneficial to reduce stressors, and also to incorporate ways to relieve stress such as exercise, sleeping regularly, and making dietary changes.</b></p>
       </div>
     </div>
   </body>
