revises answers of HTML

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         </div>
         <div class="form-group">
           <p>Please select the following stressors that apply to you:</p>
-          <input type="checkbox" name="stressor-two" value="1">Do not take breaks throughout work day.<br>
-          <input type="checkbox" name="stressor-two" value="2">Do not stay hydrated.<br>
-          <input type="checkbox" name="stressor-two" value="3">Do not exercise regularly.<br>
-          <input type="checkbox" name="stressor-two" value="4">Do not sleep at least 7 hours per day.<br>
-          <input type="checkbox" name="stressor-two" value="5">Work and/or study more than 60 hours per week regularly.<br>
+          <input type="checkbox" name="stressor-two" value="1">Take few breaks throughout work day.<br>
+          <input type="checkbox" name="stressor-two" value="2">Have a job that you hate.<br>
+          <input type="checkbox" name="stressor-two" value="3">Feel unfulfilled socially.ß<br>
+          <input type="checkbox" name="stressor-two" value="4">In an abusive relationship<br>
+          <input type="checkbox" name="stressor-two" value="5">Work and/or study more than 80 hours per week regularly.<br>
         </div>
         <div class="form-group">
           <p>Please select the following ways that you reduce stress:</p>
